--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.glandroid.himalaya">
+    <!--连接网络-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!--debug环境下将播放中产生的log输出到外置sdk,方便查询问题-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--用于管理监听网络状态的变化-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--用于管理监听网络状态的变化-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--用于管理监听网络状态的变化-->
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <!--获取电话的状态,在打电话的时候暂停播放-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--获取电话的状态,在打电话的时候暂停播放(非必须)-->
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <!--target >=28 需要设置此权限 -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
+        android:name=".base.BaseApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="app_key"
+            android:value="9f9ef8f10bebeaa83e71e62f935bede8" />
+
+        <meta-data
+            android:name="pack_id"
+            android:value="com.app.test.android" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
