播放顺逆序，以及控制面板的播放状态

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".PlayerActivity">
+        <activity android:name=".PlayerActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".DetailActivity">
+        <activity android:name=".DetailActivity"
+                  android:screenOrientation="portrait">
         </activity>
 
         <meta-data
@@ -35,7 +37,8 @@
             android:name="pack_id"
             android:value="com.app.test.android"/>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
